# ebubfy

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: album_artist.rs  audio.rs  database.rs  deezer.rs  enriched_search.rs  health.rs  lyrics.rs  mod.rs  musicbrainz.rs  search_cache.rs  text_clean.rs  theaudiodb.rs  youtube.rs  ytdlp.rs
src-tauri/src/db/: mod.rs
src/components/: ErrorBoundary.tsx
src/components/layout/: BottomNav.tsx  MiniPlayer.tsx  Sidebar.tsx  TitleBar.tsx
src/components/lyrics/: LyricsPanel.tsx
src/components/queue/: QueuePanel.tsx
src/components/search/: SearchPage.tsx
src/components/ui/: FadingLines.tsx  LazyImage.tsx
src/hooks/: useAudio.ts  useClickOutside.ts  useKeyboard.ts  useLyricsFetch.ts  useMediaSession.ts
src/i18n/: en.ts  fr.ts
src/lib/: api.ts  audioGraph.ts  constants.ts  utils.ts
src/pages/: AlbumPage.tsx  ArtistPage.tsx  BrowsePage.tsx  Home.tsx  LibraryPage.tsx  NowPlayingPage.tsx  PlaylistPage.tsx  SettingsPage.tsx
src/store/: audioSettings.ts  languageStore.ts  playerStore.ts  playlistStore.ts  themeStore.ts  toastStore.ts
src/types/: index.ts
